# yggterm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  LICENSE-CC-BY-SA-4.0  NOTICE  PRODUCT_THESIS.md  PROTOCOL.md  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  rust-toolchain.toml
.agents/skills/libyggterm-surfaces/: SKILL.md
.agents/skills/yggterm-deeptest/: SKILL.md
.agents/skills/yggterm-diagnostics/: SKILL.md
.agents/skills/yggui-app-control/: SKILL.md
.agents/skills/yggui-changelog-demo/: SKILL.md
.github/: VOUCHED.td
.github/workflows/: ci.yml  npm-publish.yml  release.yml  vouch-check.yml  vouch-manage.yml
.todos/: remote-cc-sessions-not-appearing-2026-05-25.md
agent_docs/: ghostty.md  yggterm-headless-panic-management.md  yggterm-mock-cli-panic-management.md
apps/yggterm/: Cargo.toml  build.rs
apps/yggterm/src/: headless_monitor.rs  main.rs
artifacts/demos/unreleased/: README.md
artifacts/demos/unreleased/preview-scroll-stability/: manifest.json  summary.md
assets/web-adblock/: rules.json
assets/web-userscripts/: sponsorblock.js
assets/xterm/: addon-canvas.js  addon-fit.js  addon-webgl.js  xterm.css
crates/emd-renderer/: Cargo.toml
crates/emd-renderer/src/: lib.rs
crates/paper-renderer/: Cargo.toml
crates/paper-renderer/src/: lib.rs
crates/yggterm-core/: Cargo.toml
crates/yggterm-core/examples/: trace_smoke.rs
crates/yggterm-core/src/: agent_cli.rs  agent_presence.rs  agent_scheme.rs  app_registry.rs  browser.rs  click_grid.rs  icon.rs  install.rs  lib.rs  perf.rs  retention.rs  server.rs  session_kind.rs  telemetry.rs  titles.rs  trace.rs  transcript.rs  web_profile.rs  workspace.rs
crates/yggterm-ghostty-bridge/: Cargo.toml  build.rs
crates/yggterm-ghostty-bridge/src/: lib.rs
crates/yggterm-gtk-glue/: Cargo.toml
crates/yggterm-gtk-glue/src/: lib.rs
crates/yggterm-platform/: Cargo.toml
crates/yggterm-platform/src/: lib.rs
crates/yggterm-server/: Cargo.toml
crates/yggterm-server/src/: app_control.rs  app_declare.rs  attach.rs  automation.rs  clipboard_sweep.rs  codex_cli.rs  daemon.rs  grid_overlay.rs  host.rs  lib.rs  profile_write_lock.rs  protocol.rs  remote_cli.rs  row_order_ledger.rs  screenshot.rs  terminal.rs
crates/yggterm-server/src/remote_runtime/: mod.rs  registry.rs
crates/yggterm-server/tests/: pipeline_integration.rs
crates/yggterm-shell/: Cargo.toml
crates/yggterm-shell/assets/: symbols-nerd-mono.woff2.b64
crates/yggterm-shell/src/: agent_input_arbiter.rs  app_capture.rs  command_registry.rs  hot_update_policy.rs  keytip.rs  lib.rs  scroll_mode.rs  session_copy_policy.rs  shell.rs  terminal_observe.rs  terminal_protocol.rs  terminal_retained_replay_policy.rs  terminal_themes.rs  terminal_write_bridge.rs  terminal_write_policy.rs  theme_contract.rs  ui_telemetry.rs  window_icon.rs  xterm_gate_metrics.rs
crates/yggterm-ui/: Cargo.toml  README.md
crates/yggterm-ui/src/: chrome.rs  drag_visuals.rs  lib.rs  notifications.rs  shell.rs  window_icon.rs
crates/yggterm-vault/: Cargo.toml
crates/yggterm-vault/src/: api.rs  crypto.rs  lib.rs  model.rs  session.rs  totp.rs
crates/yggterm-zed-shell/: Cargo.toml
crates/yggterm-zed-shell/src/: lib.rs
crates/yggui/: Cargo.toml  README.md
crates/yggui-contract/: Cargo.toml
crates/yggui-contract/src/: lib.rs
crates/yggui/src/: app_capture.rs  chrome.rs  drag_tree.rs  drag_visuals.rs  lib.rs  motion.rs  notifications.rs  otp.rs  rails.rs  shell.rs  terminal_themes.rs  theme.rs  window_icon.rs
debian/: README.Debian  changelog  control  copyright
docs/: 23-smoke-tests.md  agent-control-plane.md  agent-field-guide.md  alt-keytips.md  architecture-audit-2026-05-16.md  automations.md  daemon-handoff.md  experimental-worktrees.md  integration-testing.md  pending-bugs.md  protocol.md  sessions.md  shell-persistence-host-daemon.md  spec-agent-cli-harness.md  spec-emd-renderer.md  split-view.md  stability.md  telemetry-campaign-log.md  telemetry.md  terminal-backends.md  theme.md  web-surfaces.md  web-under-glass.md  xterm-bugs.md  xterm.md  ychrome-password-manager.md  yggui-click-grid.md
docs/demos/: ARCHITECTURE.md  FORMAT.md  STYLE.md
docs/experiments/: README.md  alpha-blur.md  cellulose-integration.md  excalidraw-obsidian-integration.md  openwebui-integration.md  paper-integration.md
docs/spikes/phase-f-under-glass/: Cargo.toml  README.md
docs/spikes/phase-f-under-glass/src/: main.rs
docs/spikes/slice2a-istrusted-inject/: Cargo.toml  README.md
docs/spikes/slice2a-istrusted-inject/src/: main.rs
npm/: README.md  package.json
scripts/: build-ghostty-lib.sh  check-zed-upstream.sh  check_architecture_contracts.py  daemon_audit_hosts.py  headless_monitor_23.py  headless_monitor_daemon_reap_23.py  headless_monitor_footprint_23.py  headless_monitor_remote_machine_23.py  install.ps1  install.sh  live_loading_check.py  live_mode_cycle_check.py  live_preview_check.py  live_search_check.py  migrate_uuidv4_codex_live_sessions.py  mock_cli_23.py  mock_cli_daemon_reap_23.py  mock_cli_footprint_23.py  mock_cli_remote_machine_23.py  package-deb.sh  package-platform-release.sh  package-release-ffi.sh  package-release.sh  parity_harness.py  plot-perf-telemetry.py  probe-startup.sh  rebase_experimental_worktrees.sh  release-notes.sh  remote_linux_idle_cpu_smoke.py  remote_linux_live_watch.py  remote_linux_x11_smoke.py  remote_macos_smoke.py  remote_windows_live_app.py  remote_windows_smoke.py  render-icon-assets.sh  render_fail_patterns.py  setup-zig.sh  shadow-client.sh  smoke_app_control_bootstrap.py  smoke_codex_launch_timeline.py  (+21 more)
tools/xterm-harness/: README.md  behavior.test.js  boring_reveal_resume.test.js  composer_replay_render_guard.test.js  harness.js  host_reopen_is_a_noop.test.js  husk_is_born_in_a_partial_open.test.js  husk_species_b_is_a_late_partial_open.test.js  package.json  scroll_follow_probe.test.js  smoke.test.js
tools/xterm-lab/: README.md  index.html  lab.js
