[workspace]
members = [
  "apps/yggterm",
  "crates/yggterm-core",
  "crates/yggterm-server",
  "crates/yggterm-ui",
  "crates/yggterm-gtk-glue",
  "crates/yggterm-platform",
  "crates/yggterm-ghostty-bridge",
]
resolver = "2"

[workspace.package]
version = "2.0.2"
edition = "2024"
authors = ["Yggdrasil HQ"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dirs = "6"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
