[workspace]
members = [
  "apps/yggterm",
  "crates/yggui-contract",
  "crates/yggterm-core",
  "crates/yggterm-server",
  "crates/yggui",
  "crates/yggterm-shell",
  "crates/yggterm-gtk-glue",
  "crates/yggterm-platform",
  "crates/yggterm-ghostty-bridge",
]
resolver = "2"

[workspace.package]
version = "2.1.15"
edition = "2024"
authors = ["Yggdrasil HQ"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dirs = "6"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
dioxus-desktop = { path = "vendor/dioxus-desktop" }
dioxus-interpreter-js = { path = "vendor/dioxus-interpreter-js" }
wry = { path = "vendor/wry" }
