[package]
name = "yggterm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "yggterm"
path = "src/main.rs"

[[bin]]
name = "yggterm-headless"
path = "src/bin/yggterm-headless.rs"

[[bin]]
name = "yggterm-mock-cli"
path = "src/bin/yggterm-mock-cli.rs"

[features]
default = []
ghostty-ffi = ["yggterm-server/ghostty-ffi"]

[dependencies]
anyhow.workspace = true
ctrlc = { version = "3", features = ["termination"] }
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
yggterm-core = { path = "../../crates/yggterm-core" }
yggterm-platform = { path = "../../crates/yggterm-platform" }
yggterm-server = { path = "../../crates/yggterm-server" }
yggterm-shell = { path = "../../crates/yggterm-shell" }
yggui = { path = "../../crates/yggui" }
yggui-contract = { path = "../../crates/yggui-contract" }

[build-dependencies]
png = "0.17"
ico = "0.4"
winresource = "0.1"
