[package]
name = "emd-renderer"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "emd (extended markdown) — the markdown-superset document model and parser shared by yggterm document surfaces: yedit renders the plain subset today, ztlkasten the full vault grammar next. Spec: docs/spec-emd-renderer.md in the yggterm repo."

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false }
