[package]
name = "yggterm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
time.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
semver = "1"
sha2 = "0.10"
tar = "0.4"
yggui-contract = { path = "../yggui-contract" }
