[package]
name = "yggterm-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSBitmapImageRep"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGImage", "CGWindow"] }
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSDictionary", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Console", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
