[package]
name = "yggterm-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false }
paper-renderer = { path = "../paper-renderer" }
anyhow.workspace = true
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
base64 = "0.22"
dioxus = { version = "=0.7.9", features = ["desktop"] }
dioxus-desktop = "=0.7.9"
include_dir = "0.7"
keyboard-types = "0.7"
libc = "0.2"
once_cell = "1"
png = "0.18"
serde.workspace = true
serde_json.workspace = true
tao = "0.35.0"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing.workspace = true
yggterm-core = { path = "../yggterm-core" }
yggterm-platform = { path = "../yggterm-platform" }
yggterm-server = { path = "../yggterm-server" }
yggui = { path = "../yggui" }
yggui-contract = { path = "../yggui-contract" }
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
cairo-rs = { version = "0.18.5", features = ["png"] }
gdk = "0.18.2"
gdkwayland-sys = "0.18.2"
gdk_x11_sys = { package = "gdkx11-sys", version = "0.18.2" }
gdk-pixbuf = "0.18.5"
gtk = "0.18.2"
wayland-backend = { version = "0.3.15", features = ["client_system"] }
wayland-client = { version = "0.31.14", features = ["system"] }
wayland-protocols = { version = "0.32.12", features = ["client", "staging"] }
wayland-protocols-plasma = { version = "0.3.12", features = ["client"] }
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }
wry = "0.55.0"
x11rb = "0.13.2"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage"] }
wry = "0.55.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }
