[package]
name = "yggterm-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"

[dependencies]
yggterm-core = { path = "../yggterm-core" }
anyhow.workspace = true
gpui = { path = "../../../zed/crates/gpui", default-features = false, features = ["wayland", "x11"] }
theme = { path = "../../../zed/crates/theme" }
ui = { path = "../../../zed/crates/ui" }
