[package]
name = "yggterm-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"

[dependencies]
yggterm-core = { path = "../yggterm-core" }
yggterm-platform = { path = "../yggterm-platform" }
yggterm-server = { path = "../yggterm-server" }
anyhow.workspace = true
dioxus = { version = "0.7.3", features = ["desktop"] }
once_cell = "1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tao = "0.34.6"
tracing.workspace = true
