[package]
name = "yggterm-zed-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"

[features]
default = []
zed-upstream = []

[dependencies]
anyhow.workspace = true
assets = { path = "../../../zed/crates/assets" }
component = { path = "../../../zed/crates/component" }
dirs.workspace = true
editor = { path = "../../../zed/crates/editor" }
gpui = { path = "../../../zed/crates/gpui", default-features = false, features = ["wayland", "x11"] }
gpui_platform = { path = "../../../zed/crates/gpui_platform", default-features = false, features = ["wayland", "x11"] }
serde.workspace = true
settings = { path = "../../../zed/crates/settings" }
theme = { path = "../../../zed/crates/theme" }
toml = "0.8"
ui = { path = "../../../zed/crates/ui" }
workspace = { path = "../../../zed/crates/workspace" }
yggterm-core = { path = "../yggterm-core" }
yggterm-ui = { path = "../yggterm-ui" }
